cursive-bootstrap/tests/ui/E-SEM/E-SEM-2532.cursive
// RUN: compile-fail
// DIAG: E-SEM-2532
// SPEC: 5.2.7
// DESC: Argument count mismatch

procedure add(a: i32, b: i32) -> i32 {
    return a + b
}

public procedure main(move ctx: Context) -> i32 {
    return add(1)  //~ ERROR E-SEM-2532: argument count
}
